# auto-unlocker

./: .gitignore  CMakeLists.txt  Makefile  README.md  Unlocker.exe.manifest
include/: archive.h  archiveutils.h  buildsparser.h  circularbuffer.h  colors.h  config.h  debug.h  debugutils.h  filesystem.hpp  installinfo.h  installinfoutils.h  netutils.h  network.h  patcher.h  patchutils.h  patchversioner.h  servicestoputils.h  tar.h  toolsdownloader.h  unlocker.h  unlocker_lnx.h  unlocker_win.h  versionparser.h  winservices.h  ziparchive.h
include/logging/: combinedlogstrategy.h  statusbarlogstrategy.h  streamlogstrategy.h  terminallogstrategy.h
include/win32/: downloadtoolstask.h  mainwindow.h  patchertask.h  patcherthread.h  patchresult.h  resources.h  task.h  unpatchertask.h
include/win32/controls/: button.h  checkbox.h  control.h  editbox.h  groupbox.h  label.h  progress.h  statusbar.h  window.h
include/win32/events/: events.h
modules/: FindLibZip.cmake
src/: archive.cpp  archiveutils.cpp  buildsparser.cpp  circularbuffer.cpp  debug.cpp  debugutils.cpp  installinfo.cpp  installinfoutils.cpp  main.cpp  netutils.cpp  network.cpp  patcher.cpp  patchutils.cpp  patchversioner.cpp  servicestoputils.cpp  tar.cpp  toolsdownloader.cpp  unlocker.cpp  unlocker_lnx.cpp  unlocker_win.cpp  versionparser.cpp  winservices.cpp  ziparchive.cpp
src/logging/: combinedlogstrategy.cpp  logstrategy.cpp  statusbarlogstrategy.cpp  streamlogstrategy.cpp  terminallogstrategy.cpp
src/win32/: downloadtoolstask.cpp  mainwindow.cpp  patchertask.cpp  patcherthread.cpp  unpatchertask.cpp
src/win32/controls/: button.cpp  checkbox.cpp  control.cpp  editbox.cpp  groupbox.cpp  label.cpp  progress.cpp  statusbar.cpp  window.cpp
tests/: test.h  test_patch.cpp  test_tar.cpp  test_zip.cpp
